--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
-            android:name=".MainActivity"
+            android:name="com.beessoftware.betplus_ios.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:taskAffinity=""
