--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -42,20 +43,21 @@ dependencies:
   flutter_styled_toast:
   image_picker: ^0.8.7+2
   flutter_slider_drawer:
-  share:
+
   curved_navigation_bar: ^1.0.3
   shared_preferences:
   #firebase_core:
   #firebase_auth:
   fluttertoast:
   number_to_words:
-  url_launcher: ^6.0.0
 
-  webview_flutter: ^2.0.13
-  flutter_native_splash: ^1.2.0
+
+  webview_flutter: ^4.2.1
+  webview_flutter_android: ^4.0.0
+  url_launcher: ^6.1.7
 
   provider: ^6.0.1
-  paytm_allinonesdk: ^1.1.7
+  paytm_allinonesdk: ^1.2.6
   local_auth:
   open_file: ^3.2.1
   equatable:
@@ -66,12 +68,13 @@ dependencies:
   palette_generator: ^0.3.0
   firebase_core:
 
-  firebase_messaging:
+  firebase_messaging: ^15.1.3
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
