--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PROJECT_ID</key>
 	<string>betplus-87c82</string>
 	<key>STORAGE_BUCKET</key>
-	<string>betplus-87c82.appspot.com</string>
+	<string>betplus-87c82.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
